--- a/package.json
+++ b/package.json
@@ -34,5 +34,20 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
     "yup": "^1.3.3"
-  }
+  },
+  "directories": {
+    "doc": "docs",
+    "example": "example"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AmirMFa/cints-core.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AmirMFa/cints-core/issues"
+  },
+  "homepage": "https://github.com/AmirMFa/cints-core#readme",
+  "description": ""
 }
